--- a/css/style.css
+++ b/css/style.css
@@ -703,3 +703,12 @@ section{
     }
 
 }
+
+#list{
+    font-size:  1.5em;
+    margin-left: 90px;
+   }
+ 
+.prod{
+   display: list-item;    
+  } 
